Fix width of event details on mobile

--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -9,7 +9,6 @@
 @media (max-width: 767px) {
     .full-container {
         background-color: white;
-        width: 100vw;
     }
 
     .detail-card {
